--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@next/font": "13.3.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "cssjanus": "^2.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0",
+    "redux-toolkit": "^1.1.2",
+    "sass": "^1.62.1"
   }
 }
